Fixed Css to wordwrap long names in card print and preview

--- a/css/style.css
+++ b/css/style.css
@@ -1126,21 +1126,34 @@ dt.tabs dt{
 }
 
 .cardCompanyLogo{
-    height: 30px;
+/*    height: 30px;
     margin-left: -104px;
     margin-top: -38px;
+    position: absolute;
+    width: 50px;*/
+    float: left;
+    height: 30px;
+    margin-left: -105px;
+    margin-top: 77px;
     position: absolute;
     width: 50px;
 }
 
 .cardCompanyLogoPreregistered{
-    height: 30px;
+/*    height: 30px;
     margin-left: -155px;
    // margin-top: -64px;
     
     margin-top: -14px;
     //-moz-margin-start: -64px;
     position: relative;
+    width: 50px;*/
+   
+    float: left;
+    height: 30px;
+    margin-left: -105px;
+    margin-top: 77px;
+    position: absolute;
     width: 50px;
 }
 
